Token and Authentication Logic

--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DatingApp": "server=localhost\\LocalTest;database=datingappdb;Trusted_Connection=true;Encrypt=false;TrustServerCertificate=true"
-  }
+  },
+  "TokenKey": "this is my custom Secret key for authentication and it has over 512 bits"
 }
